  NEW: Support for nxAutoNuke v2.3 (the ANUKESIZE event).
  CHG: Renamed "latest" and "search" themes to "new" and "dupe", respectively.
  CHG: Renamed the "ips" array element to "hosts" for the UserInfo function.
  FIX: Corrected a few grammatical errors in command descriptions (patch by iwi).
  FIX: Corrected inconsistencies in the time duration functions (patch by iwi).
  FIX: The invite module passed the wrong number of arguments to ScriptUnregister (patch by iwi).

AlcoBot v0.6.0 (Oct 23, 2005):
  NEW: Added a "notify" callback to the FTP library (connection success).
  NEW: Bouncer module, to display the status of FTP bouncers.
  NEW: Expanded zipscript support to include iojZS (jeza) and php_psio (SnypeTEST).
  NEW: The "ftpd" module will indicate if the FTP connection succeeded or failed.
  CHG: A trailing path separator is appended to %(releaseFull) and %(releasePath).
  CHG: Debug mode is disabled by default in the sample configuration files.
  FIX: Forgot to add the "UPDATE" log type to the "zipscript" event group.
  FIX: "SITE INVADMIN USER" would fail if the same IRC and FTP user were used repeatedly.
  FIX: The command help message displayed the command name instead of the binding.
  FIX: The default colours are used if there are no available section colours.

AlcoBot v0.5.0 (Oct 12, 2005):
  NEW: Add, fill, or remove requests from IRC with the !request, !reqfill, and !reqdel commands.
  NEW: Added command aliases !dn and !up for !leechers and !uploaders, respectively.
  NEW: Approve releases from IRC with the !approve command.
  NEW: Asynchronous FTP client library with SSL and TLS support.
  NEW: Expanded zipscript support to include ioSFV (_tUFF) and Project-ZS (Caladan/esmandil).
  NEW: File containing all available variables (variables.txt).
  NEW: List commands on the configuration dump, ".alcobot dump".
  NEW: Rewrote the command interface, proper support for aliases and flag checking.